syntax = "proto3";

package auth.v1;

import "user/v1/user.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/thinc-org/10-days-paotooong/gen/proto/auth/v1";

service AuthService {
	rpc Register(RegisterRequest) returns (RegisterResponse) {
		option (google.api.http) = {
			post: "/v1/auth/register"
			body: "*"
		};
	}
	rpc Login(LoginRequest) returns (LoginResponse) {
		option (google.api.http) = {
			post: "/v1/auth/login"
			body: "*"
		};
	}
	rpc Me(MeRequest) returns (MeResponse) {
		option (google.api.http) = {
			get: "/v1/auth/me"
		};
	}
}

message AuthToken {
	string access_token = 1;
	int32 ttl = 2;
}

// Register
message RegisterRequest {
	string email = 1 [
		(google.api.field_behavior) = REQUIRED,
		(buf.validate.field).string.email = true
	];
	string password = 2 [
		(google.api.field_behavior) = REQUIRED,
		(buf.validate.field).string.min_len = 8,
		(buf.validate.field).string.max_len = 32
	];
	string first_name = 3 [
		(google.api.field_behavior) = REQUIRED,
		(buf.validate.field).string.min_len = 1
	];
	string family_name = 4 [
		(google.api.field_behavior) = REQUIRED,
		(buf.validate.field).string.min_len = 1
	];
}

message RegisterResponse {
	AuthToken token = 1;
}

// Login
message LoginRequest {
	string email = 1 [
		(google.api.field_behavior) = REQUIRED,
		(buf.validate.field).string.email = true
	];
	string password = 2 [
		(google.api.field_behavior) = REQUIRED,
		(buf.validate.field).string.min_len = 8,
		(buf.validate.field).string.max_len = 32
	];
}

message LoginResponse {
	AuthToken token = 1;
}

// Me
message MeRequest {
}

message MeResponse {
	user.v1.User user = 1;
}

